2007-02-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-02-11
	* provide empty stopAction, according to changes to
	Utilities/EPStateMachine.
	
2006-11-29  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-02-10
	* remove debug() method
	* remove check_event_data() method
	* fix stopTimer()/initTimer()
	* add BU::reset() to set all counters and non-counters to their
	'configured' state
	* verify that "configure - enable - halt - configure - enable"
	sequence is functional

2006-11-28  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-02-09
	* bug fix

2006-11-28  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-02-08
	* fix the way the internal fed buffers are filled in PLAYBACK
	mode. It wouldn't have worked for more than 64 feds (so it
	doesn't matter much for MTCC I/II data)
	

2006-11-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-02-07
	* protect call to 'postFrame' with a try/catch block and keep
	trying to post until it succeeds. Two new debug counters,
	nbPostFrame_ and nbPostFrameFailed_ keep track of this.

2006-11-22  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-02-06
	* add initTimer()/startTimer()/stopTimer
	methods. start The timer upon receiving the first request, not
	when enabling.
	* lock the thread when manipulating the variables used in the
	performance measurements, like nbBytes_.
	* rename bSem_ -> lock_. Add lock()/unlock() methods.

2006-11-09  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-02-05
	* fix bug regarding the FRL_LAST_SEGM flag not being set
	  appropriately in rare cases, spotted by Emilio
	* To distribute all valid feds among all superfragments, allow for
	  two different numbers of feds per superfragment. See
	  initFedBuffers(nFed), which is looking at (and possibly
	  changing!) nSuperFrag_ to distribute all FED Ids into
	  superfragments.
